| Bug #28653 | Fast GCP + high load + high RedoBuffer causes ndbrequire | ||
|---|---|---|---|
| Submitted: | 24 May 2007 14:39 | Modified: | 11 Jun 2007 22:29 |
| Reporter: | Tomas Ulin | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S1 (Critical) |
| Version: | OS: | Any | |
| Assigned to: | Tomas Ulin | Target Version: | |
| Tags: | ndb61 | ||
[24 May 2007 16:21]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/27278 ChangeSet@1.2470, 2007-05-24 16:40:05+02:00, tomas@whalegate.ndb.mysql.com +3 -0 Bug #28653 Fast GCP + high load + high RedoBuffer causes ndbrequire - parameterize on RedoBuffer
[24 May 2007 16:32]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/27279 ChangeSet@1.2471, 2007-05-24 16:50:38+02:00, tomas@whalegate.ndb.mysql.com +1 -0 Bug #28653 Fast GCP + high load + high RedoBuffer causes ndbrequire - correction, use recomputed _actual_ redobuffer
[24 May 2007 20:42]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/27295 ChangeSet@1.2500, 2007-05-24 21:02:01+02:00, tomas@whalegate.ndb.mysql.com +3 -0 Bug #28653 Fast GCP + high load + high RedoBuffer causes ndbrequire - correction, use recomputed _actual_ redobuffer
[28 May 2007 12:37]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/27444 ChangeSet@1.2501, 2007-05-28 12:56:48+02:00, tomas@whalegate.ndb.mysql.com +2 -0 Bug #28653 Fast GCP + high load + high RedoBuffer causes ndbrequire - correction, backport to 5.0
[28 May 2007 12:45]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/27445 ChangeSet@1.2513, 2007-05-28 13:05:05+02:00, tomas@whalegate.ndb.mysql.com +1 -0 Bug #28653 Fast GCP + high load + high RedoBuffer causes ndbrequire - correction, backport to 5.0
[11 Jun 2007 13:39]
Bugs System
Pushed into 5.1.20-beta
[11 Jun 2007 13:42]
Bugs System
Pushed into 5.0.44
[11 Jun 2007 22:29]
Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.
If necessary, you can access the source repository and build the latest available
version, including the bug fix. More information about accessing the source trees is
available at
http://dev.mysql.com/doc/en/installing-source.html
Documented bugfix in 5.0.44, 5.1.20, and telco-6.1.10 changelogs.
[3 Jul 2007 8:48]
Jon Stephens
Also documented for telco-6.2.3 release.

Description: Time: Thursday 24 May 2007 - 14:40:36 Status: Temporary error, restart node Message: Pointer too large (Internal error, programming error or missing error message, please report a bug) Error: 2306 Error data: dblqh/DblqhMain.cpp Error object: DBLQH (Line: 13389) 0x00000002 Program: ./ndbd Pid: 12614 Trace: /var/mnt/local/MySQLClusterSubs-0-B_DATA/ndb_4_trace.log.1 Version: mysql-5.1.15 ndb-6.1.9-beta void Dblqh::seizeLfo(Signal* signal) { lfoPtr.i = cfirstfreeLfo; ptrCheckGuard(lfoPtr, clfoFileSize, logFileOperationRecord); cfirstfreeLfo = lfoPtr.p->nextLfo; lfoPtr.p->nextLfo = RNIL; lfoPtr.p->lfoTimer = cLqhTimeOutCount; }//Dblqh::seizeLfo() How to repeat: . Suggested fix: parameterize: clfoFileSize = "RedoBuffer"/32K instead of now compile time fixed 256